--- a/webdev.html
+++ b/webdev.html
@@ -110,7 +110,7 @@
         <ul class="navbar">
 
             <li class="logo">&lt;/&gt;Git Dib</li>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="webdev.html" onclick="showSection('webdev')">Web Dev.</a>
             <a href="#" onclick="showSection('cpp')">C++</a>
             <a href="#" onclick="showSection('c')">C</a>
