--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <li class="logo">&lt;/&gt;Git Dib</li>
             <a href="home.html">Home</a>
-            <a href="webdev.html" onclick="showSection('webdev')">Web Dev.</a>
+            <a href="https://github.com/DibyajyotiBiswal57/DibyajyotiBiswal57/" onclick="showSection('webdev')">Web Dev.</a>
             <a href="#" onclick="showSection('cpp')">C++</a>
             <a href="#" onclick="showSection('c')">C</a>
             <a href="#" onclick="showSection('cs')">C#</a>
