--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
             <li class="logo">&lt;/&gt;Git Dib</li>
             <a href="home.html">Home</a>
             <a href="https://github.com/DibyajyotiBiswal57/DibyajyotiBiswal57/" onclick="showSection('webdev')">Web Dev.</a>
-            <a href="#" onclick="showSection('cpp')">C++</a>
-            <a href="#" onclick="showSection('c')">C</a>
-            <a href="#" onclick="showSection('cs')">C#</a>
-            <a href="#" onclick="showSection('java')">Java</a>
-            <a href="#" onclick="showSection('python')">Python</a>
-            <a href="#" onclick="showSection('hs')">Haskell</a>
-            <a href="#" onclick="showSection('go')">GoLang</a>
-            <a href="#" onclick="showSection('rs')">Rust</a>
-            <a href="#" onclick="showSection('bas')">QBasic</a>
+            <a href="https://github.com/DibyajyotiBiswal57/Cplusplus-programs/" onclick="showSection('cpp')">C++</a>
+            <a href="https://github.com/DibyajyotiBiswal57/C-programs" onclick="showSection('c')">C</a>
+            <a href="https://github.com/DibyajyotiBiswal57/Csharp-programs" onclick="showSection('cs')">C#</a>
+            <a href="https://github.com/DibyajyotiBiswal57/Java-programs" onclick="showSection('java')">Java</a>
+            <a href="https://github.com/DibyajyotiBiswal57/Python-programs" onclick="showSection('python')">Python</a>
+            <a href="https://github.com/DibyajyotiBiswal57/Haskell-programs" onclick="showSection('hs')">Haskell</a>
+            <a href="https://github.com/DibyajyotiBiswal57/Go-programs" onclick="showSection('go')">GoLang</a>
+            <a href="https://github.com/DibyajyotiBiswal57/Rust-programs" onclick="showSection('rs')">Rust</a>
+            <a href="https://github.com/DibyajyotiBiswal57/Java-programs" onclick="showSection('bas')">QBasic</a>
             <input placeholder="Search.." class="searchBar" name="searchBar" type="text">
             <i class="fa-solid fa-magnifying-glass"></i>
 
