--- a/index.html
+++ b/index.html
@@ -182,19 +182,18 @@
  
 <img src="https://github-profile-trophy.vercel.app/?username=dibyajyotibiswal57&&title=-PullRequest,-Reviews&theme=gitdimmed" alt="dibyajyotibiswal57" /></a> <img src="https://readme-jokes.vercel.app/api?theme=gradientBlue&hideborder" alt="Jokes Card" /> <img align="center" src="https://quotes-github-readme.vercel.app/api?type=vertical&theme=github" />
 
-- 🔭 I’m currently making [Rust](https://github.com/DibyajyotiBiswal57/Rust-programs), [Python](https://github.com/DibyajyotiBiswal57/Python-programs), [C#](https://github.com/DibyajyotiBiswal57/Csharp-programs), [C](https://github.com/DibyajyotiBiswal57/C-programs) and [C++](https://github.com/DibyajyotiBiswal57/Cplusplus-programs) programs.
-
-- 🌱 I’m currently learning **Python, Rust, C, C++ and C#**.
-
-- 👨‍💻 All of my projects are available at [my GitHub profile](https://github.com/DibyajyotiBiswal57?tab=repositories).
-
-- 💬 Ask me about **Mathematics and Physics**.
-
-- 📫 Reach me at **dibbipersonal@gmail.com** or at my socials.
-
-- ⚡ Fun fact **I am a person. Wow!? 🤯😮**
-
-- 👯‍♂️ My friends are [Aryaman](https://github.com/albert-hawkins-heisenberg), [Kshitij](https://github.com/UnderRatedCoder05) and [Diptansu](https://github.com/dsdoescreative).
+<br>
+                <p class="lt">
+                    --> 🔭 I’m currently making Rust, Python , C#, C, C++ and Java programs.
+                    <br>
+                    --> 👨‍💻 All of my projects are available at <a href="github.com/DibyajyotiBiswal57"> my profile. </a>
+                    <br>
+                    --> 💬 Ask me about "Mathematics and Physics".
+                    <br>
+                    --> 📫 Reach me at dibbipersonal@gmail.com or at my socials.
+                    <br>
+                    --> ⚡ Fun fact: "I am a person." Wow! 🤯😮
+                </p>
 
 
 <p> <img align="center" src="https://github-readme-activity-graph.vercel.app/graph?username=DibyajyotiBiswal57&&theme=github&hide_border=true&custom_title=My%20contributions%20graph&days=40" /> </p>
