--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
 
 <p> <img src="https://github-widgetbox.vercel.app/api/profile?username=DibyajyotiBiswal57&data=followers,repositories,stars,commits&theme=darkmode" /> </p>
  
-<img src="https://github-profile-trophy.vercel.app/?username=dibyajyotibiswal57&&title=-PullRequest,-Reviews&theme=gitdimmed" alt="dibyajyotibiswal57" /></a> <img src="https://readme-jokes.vercel.app/api?theme=gradientBlue&hideborder" alt="Jokes Card" /> <img align="center" src="https://quotes-github-readme.vercel.app/api?type=vertical&theme=github" />
-
+<img src="https://github-profile-trophy.vercel.app/?username=dibyajyotibiswal57&&title=-PullRequest,-Reviews&theme=gitdimmed" alt="dibyajyotibiswal57" />
 <br>
                 <p class="lt">
                     --> 🔭 I’m currently making Rust, Python , C#, C, C++ and Java programs.
