--- a/index.html
+++ b/index.html
@@ -150,8 +150,6 @@
             <a href="https://github.com/DibyajyotiBiswal57/Csharp-programs" onclick="showSection('cs')">C#</a>
             <a href="https://github.com/DibyajyotiBiswal57/Java-programs" onclick="showSection('java')">Java</a>
             <a href="https://github.com/DibyajyotiBiswal57/Python-programs" onclick="showSection('python')">Python</a>
-            <a href="https://github.com/DibyajyotiBiswal57/Haskell-programs" onclick="showSection('hs')">Haskell</a>
-            <a href="https://github.com/DibyajyotiBiswal57/Go-programs" onclick="showSection('go')">GoLang</a>
             <a href="https://github.com/DibyajyotiBiswal57/Rust-programs" onclick="showSection('rs')">Rust</a>
             <a href="https://github.com/DibyajyotiBiswal57/Java-programs" onclick="showSection('bas')">QBasic</a>
             <input placeholder="Search.." class="searchBar" name="searchBar" type="text">
@@ -175,8 +173,8 @@
         <div class="container">
             <div>
 
-<h1 align="center"><a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Space+Mono&size=30&pause=500&color=387CF7&center=true&vCenter=true&width=570&lines=Hi+%F0%9F%91%8B%2C+I'm+Dibyajyoti+Biswal" alt="Typing SVG" /></a></h1>
-<h3 align="center"><a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Space+Mono&size=18&pause=500&color=30A5F7&center=true&vCenter=true&width=600&lines=A+student+who+struggles+with+studies." alt="Typing SVG" /></a></h3>
+<h1><a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Space+Mono&size=30&pause=500&color=387CF7&center=true&vCenter=true&width=570&lines=Hi+%F0%9F%91%8B%2C+I'm+Dibyajyoti+Biswal" alt="Typing SVG" /></a></h1>
+<h3><a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Space+Mono&size=18&pause=500&color=30A5F7&center=true&vCenter=true&width=600&lines=A+student+who+struggles+with+studies." alt="Typing SVG" /></a></h3>
 
 <p> <img src="https://github-widgetbox.vercel.app/api/profile?username=DibyajyotiBiswal57&data=followers,repositories,stars,commits&theme=darkmode" /> </p>
  
