--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Dib-Home</title>
+    <title>DibyajyotiBiswal57</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -142,7 +142,7 @@
     <nav id="home">
         <ul class="navbar">
 
-            <li class="logo">&lt;/&gt;Git Dib</li>
+            <li class="logo">&lt;/&gt;DibyajyotiBiswal57</li>
             <a href="home.html">Home</a>
             <a href="https://github.com/DibyajyotiBiswal57/DibyajyotiBiswal57/" onclick="showSection('webdev')">Web Dev.</a>
             <a href="https://github.com/DibyajyotiBiswal57/Cplusplus-programs/" onclick="showSection('cpp')">C++</a>
@@ -244,6 +244,7 @@
 
 </div>
         </div>
+    <div id="sfcnnzwgcagff571epcg1k5bebct2nd6d9d"></div> <script type="text/javascript" src="https://counter1.optistats.ovh/private/counter.js?c=nnzwgcagff571epcg1k5bebct2nd6d9d&down=async" async></script> <noscript><a href="https://www.freecounterstat.com" title="page counter"><img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=nnzwgcagff571epcg1k5bebct2nd6d9d" border="0" title="page counter" alt="page counter"></a></noscript> 
 </body>
 
 </html>
