Update index.html to restore the original structure and add featured programs section

--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-<!DOCTYPE html>\n<html lang='en'>\n<head>\n    <meta charset='UTF-8'>\n    <meta name='viewport' content='width=device-width, initial-scale=1.0'>\n    <title>My Portfolio</title>\n    <link rel='stylesheet' href='styles.css'>\n</head>\n<body>\n    <!-- Navigation -->\n    <nav>\n        <ul>\n            <li><a href='#hero'>Home</a></li>\n            <li><a href='#about'>About</a></li>\n            <li><a href='#skills'>Skills</a></li>\n            <li><a href='#projects'>Projects</a></li>\n            <li><a href='#contact'>Contact</a></li>\n        </ul>\n    </nav>\n    \n    <!-- Hero Section -->\n    <section id='hero'>\n        <h1>Welcome to My Portfolio</h1>\n        <p>Showcasing my work and projects.</p>\n    </section>\n    \n    <!-- About Section -->\n    <section id='about'>\n        <h2>About Me</h2>\n        <p>A brief introduction about myself.</p>\n    </section>\n    \n    <!-- Skills Section -->\n    <section id='skills'>\n        <h2>Skills</h2>\n        <ul>\n            <li>JavaScript</li>\n            <li>HTML & CSS</li>\n            <li>Python</li>\n        </ul>\n    </section>\n    \n    <!-- Projects/Stats Section -->\n    <section id='projects'>\n        <h2>Projects</h2>\n        <div class='project-card'>\n            <h3>Programs Collection</h3>\n            <p>This website hosts all the programs I have made - explore my collection of programs, algorithms, and code snippets across multiple programming languages.</p>\n            <div class='tags'>\n                <span>Python</span>\n                <span>C/C++</span>\n                <span>Java</span>\n                <span>Algorithms</span>\n                <span>DSA</span>\n            </div>\n            <a href='https://dibyajyotibiswal57.github.io/programs/' class='visit-button'>Visit Programs</a>\n        </div>\n        <!-- Other projects can be listed here -->\n    </section>\n    \n    <!-- Contact Section -->\n    <section id='contact'>\n        <h2>Contact Me</h2>\n        <p>Email: example@example.com</p>\n    </section>\n    \n    <!-- Footer -->\n    <footer>\n        <p>&copy; 2026 Dibyajyoti Biswal. All rights reserved.</p>\n    </footer>\n</body>\n</html>\n
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Website Title</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+</head>
+<body>
+    <nav>
+        <img src="logo.png" alt="DB Logo">
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <section class="hero">
+        <h1>Hello, I'm Dibyajyoti Biswal <span>👋</span></h1>
+        <div class="typing-container">Typing...</div>
+        <blockquote>"Inspiring Quote Here"</blockquote>
+        <button>Learn More</button>
+        <button>Contact Me</button>
+    </section>
+    <section id="about">
+        <div class="card">Learning</div>
+        <div class="card">Current Project</div>
+        <div class="card">My Projects</div>
+        <div class="card">My Friends</div>
+        <div class="card">Looking For</div>
+        <div class="card">Fun Fact</div>
+    </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="skill-icons">[Skill Icons Here]</div>
+        <div class="operating-systems">[Operating Systems Here]</div>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="featured-project">
+            <h3>Featured Project</h3>
+            <p>Highlighted Project: <a href="https://dibyajyotibiswal57.github.io/programs/">Programs Website</a></p>
+            <p>Description: This website hosts all the programs I have made</p>
+            <p>Tags: Python, C/C++, Java, Algorithms, DSA</p>
+        </div>
+        <div class="github-statistics">
+            <h3>GitHub Statistics</h3>
+            [Language Stats Here]
+        </div>
+        <div class="contribution-graph">
+            <h3>Contribution Graph</h3>
+            [Graph Here]
+        </div>
+    </section>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <ul>
+            <li><a href="mailto:your_email@example.com">Email</a></li>
+            <li><a href="https://github.com/DibyajyotiBiswal57">GitHub</a></li>
+            <li><a href="https://twitter.com/yourprofile">Twitter</a></li>
+        </ul>
+    </section>
+    <footer>
+        <p>&copy; 2026 Dibyajyoti Biswal. All rights reserved.</p>
+        <p>Your Tagline Here</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
