--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <h3>My Friends</h3>
                     <p>
                         <a href="https://github.com/UnderRatedCoder05" target="_blank" rel="noopener">Kshitij</a>, 
-                        <a href="https://github.com/MrA-100" target="_blank" rel="noopener">Akshaj</a>, 
+                        <a href="https://github.com/Quantum404AK" target="_blank" rel="noopener">Akshaj</a>, 
                         <a href="https://github.com/albert-hawkins-heisenberg" target="_blank" rel="noopener">Aryaman</a>, 
                         <a href="https://github.com/dsdoescreative" target="_blank" rel="noopener">Diptansu</a>
                     </p>
